// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`between-head-and-body.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
do // 11
{} while(1)
for(a in b) // 12
{}
for(a of b) // 13
{}
for(;;) // 14
{}
if(a) // 15
{}
else // 152
{}
while(a) // 16
{}
with(a) // 17
{}

do
// 21
{} while(1)
for(a in b)
// 22
{}
for(a of b)
// 23
{}
for(;;)
// 24
{}
if(a)
// 25
{}
else
// 252
{}
while(a)
// 26
{}
with(a)
// 27
{}

do /* 31 */
{} while(1)
for(a in b) /* 32 */
{}
for(a of b) /* 33 */
{}
for(;;) // 34 */
{}
if(a) /* 35 */
{}
else /* 352 */
{}
while(a) /* 36 */
{}
with(a) /* 37 */
{}

do /* 41 */
{} while(1)
for(a in b) /* 42 */
{}
for(a of b) /* 43 */
{}
for(;;) // 34 */
{}
if(a) /* 45 */
{}
else /* 452 */
{}
while(a) /* 46 */
{}
with(a) /* 47 */
{}

do /*
51 */
{} while(1)
for(a in b) /*
52 */
{}
for(a of b) /*
53 */
{}
for(;;) // 54 */
{}
if(a) /*
55 */
{}
else /*
552 */
{}
while(a) /*
56 */
{}
with(a) /*
57 */
{}

do /* */ /*
61 */
{} while(1)
for(a in b) /* */ /*
62 */
{}
for(a of b) /* */ /*
63 */
{}
for(;;) // 54 */
{}
if(a) /* */ /*
65 */
{}
else /* */ /*
652 */
{}
while(a) /* */ /*
66 */
{}
with(a) /* */ /*
67 */
{}

=====================================output=====================================
do // 11
{} while (1);
for (a in b) // 12
{
}
for (a of b) // 13
{
}
for (;;) // 14
{}
if (a) // 15
{
} else // 152
{
}
while (a) // 16
{}
with (a) // 17
{
}

do
// 21
{} while (1);
for (a in b)
// 22
{
}
for (a of b)
// 23
{
}
for (;;)
// 24
{}
if (a)
// 25
{
} else
// 252
{
}
while (a)
// 26
{}
with (a)
// 27
{
}

do /* 31 */ {} while (1);
for (a in b) /* 32 */
{
}
for (a of b) /* 33 */
{
}
for (;;) // 34 */
{}
if (a) /* 35 */
{
} else /* 352 */
{
}
while (a) /* 36 */ {}
with (a) /* 37 */
{
}

do /* 41 */ {} while (1);
for (a in b) /* 42 */
{
}
for (a of b) /* 43 */
{
}
for (;;) // 34 */
{}
if (a) /* 45 */
{
} else /* 452 */
{
}
while (a) /* 46 */ {}
with (a) /* 47 */
{
}

do
/*
51 */
{} while (1);
for (a in b)
/*
52 */
{
}
for (a of b)
/*
53 */
{
}
for (;;) // 54 */
{}
if (a)
/*
55 */
{
} else
/*
552 */
{
}
while (a)
/*
56 */
{}
with (a)
/*
57 */
{
}

do /* */ /*
61 */
{} while (1);
for (a in b) /* */ /*
62 */
{
}
for (a of b) /* */ /*
63 */
{
}
for (;;) // 54 */
{}
if (a) /* */ /*
65 */
{
} else /* */ /*
652 */
{
}
while (a) /* */ /*
66 */
{}
with (a) /* */ /*
67 */
{
}

================================================================================
`;

exports[`empty-statement.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
do // 11
; while(1)
for(a in b) // 12
;
for(a of b) // 13
;
for(;;) // 14
;
if(a) // 15
;
else // 152
;
while(a) // 16
;
with(a) // 17
;

do
// 21
; while(1)
for(a in b)
// 22
;
for(a of b)
// 23
;
for(;;)
// 24
;
if(a)
// 25
;
else
// 252
;
while(a)
// 26
;
with(a)
// 27
;

do /* 31 */
; while(1)
for(a in b) /* 32 */
;
for(a of b) /* 33 */
;
for(;;) // 34 */
;
if(a) /* 35 */
;
else /* 352 */
;
while(a) /* 36 */
;
with(a) /* 37 */
;

do /* 41 */
; while(1)
for(a in b) /* 42 */
;
for(a of b) /* 43 */
;
for(;;) // 34 */
;
if(a) /* 45 */
;
else /* 452 */
;
while(a) /* 46 */
;
with(a) /* 47 */
;

do /*
51 */
; while(1)
for(a in b) /*
52 */
;
for(a of b) /*
53 */
;
for(;;) // 34 */
;
if(a) /*
55 */
;
else /*
552 */
;
while(a) /*
56 */
;
with(a) /*
57 */
;

=====================================output=====================================
do // 11
;
while (1);
for (a in b) // 12
;
for (a of b) // 13
;
for (;;) // 14
;
if (a) // 15
;
else // 152
;
while (a) // 16
;
with (a) // 17
;

do // 21
;
while (1);
for (a in b) // 22
;
for (a of b) // 23
;
for (;;) // 24
;
if (a) // 25
;
else // 252
;
while (a) // 26
;
with (a) // 27
;

do /* 31 */ ;
while (1);
for (a in b) /* 32 */ ;
for (a of b) /* 33 */ ;
for (;;) // 34 */
;
if (a) /* 35 */ ;
else /* 352 */ ;
while (a) /* 36 */ ;
with (a) /* 37 */ ;

do /* 41 */ ;
while (1);
for (a in b) /* 42 */ ;
for (a of b) /* 43 */ ;
for (;;) // 34 */
;
if (a) /* 45 */ ;
else /* 452 */ ;
while (a) /* 46 */ ;
with (a) /* 47 */ ;

do /*
51 */
;
while (1);
for (a in b) /*
52 */
;
for (a of b) /*
53 */
;
for (;;) // 34 */
;
if (a) /*
55 */
;
else /*
552 */
;
while (a) /*
56 */
;
with (a) /*
57 */
;

================================================================================
`;

exports[`non-block.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
do // 11
foo(); while(1)
for(a in b) // 12
foo();
for(a of b) // 13
foo();
for(;;) // 14
foo();
if(a) // 15
foo();
else // 152
foo();
while(a) // 16
foo();
with(a) // 17
foo();

do
// 21
foo(); while(1)
for(a in b)
// 22
foo();
for(a of b)
// 23
foo();
for(;;)
// 24
foo();
if(a)
// 25
foo();
else
// 252
foo();
while(a)
// 26
foo();
with(a)
// 27
foo();

do /* 31 */
foo(); while(1)
for(a in b) /* 32 */
foo();
for(a of b) /* 33 */
foo();
for(;;) // 34 */
foo();
if(a) /* 35 */
foo();
else /* 352 */
foo();
while(a) /* 36 */
foo();
with(a) /* 37 */
foo();

do /* 41 */
foo(); while(1)
for(a in b) /* 42 */
foo();
for(a of b) /* 43 */
foo();
for(;;) // 34 */
foo();
if(a) /* 45 */
foo();
else /* 452 */
foo();
while(a) /* 46 */
foo();
with(a) /* 47 */
foo();

do /*
51 */
foo(); while(1)
for(a in b) /*
52 */
foo();
for(a of b) /*
53 */
foo();
for(;;) // 34 */
foo();
if(a) /*
55 */
foo();
else /*
552 */
foo();
while(a) /*
56 */
foo();
with(a) /*
57 */
foo();

=====================================output=====================================
do
  // 11
  foo();
while (1);
for (a in b)
  // 12
  foo();
for (a of b)
  // 13
  foo();
for (;;)
  // 14
  foo();
if (a)
  // 15
  foo();
else
  // 152
  foo();
while (a)
  // 16
  foo();
with (a)
  // 17
  foo();

do
  // 21
  foo();
while (1);
for (a in b)
  // 22
  foo();
for (a of b)
  // 23
  foo();
for (;;)
  // 24
  foo();
if (a)
  // 25
  foo();
else
  // 252
  foo();
while (a)
  // 26
  foo();
with (a)
  // 27
  foo();

do /* 31 */ foo();
while (1);
for (a in b) /* 32 */ foo();
for (a of b) /* 33 */ foo();
for (;;)
  // 34 */
  foo();
if (a) /* 35 */ foo();
else /* 352 */ foo();
while (a) /* 36 */ foo();
with (a) /* 37 */ foo();

do /* 41 */ foo();
while (1);
for (a in b) /* 42 */ foo();
for (a of b) /* 43 */ foo();
for (;;)
  // 34 */
  foo();
if (a) /* 45 */ foo();
else /* 452 */ foo();
while (a) /* 46 */ foo();
with (a) /* 47 */ foo();

do
  /*
51 */
  foo();
while (1);
for (a in b)
  /*
52 */
  foo();
for (a of b)
  /*
53 */
  foo();
for (;;)
  // 34 */
  foo();
if (a)
  /*
55 */
  foo();
else
  /*
552 */
  foo();
while (a)
  /*
56 */
  foo();
with (a)
  /*
57 */
  foo();

================================================================================
`;
